syntax = "proto3";
package order;

option go_package = "github.com/Junedayday/micro_web_service/gen/idl/order";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message ListOrdersRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 count = 2;
}

message Order {
  int64 id = 1;
  string name = 2;
  float price = 3;
  google.protobuf.Timestamp create_time = 4;
  google.protobuf.Timestamp update_time = 5;
}

message GetOrderRequest {
  string name = 1;
}

message CreateOrderRequest {
  Order order = 1;
}

message UpdateOrderRequest {
  Order order = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteOrderRequest {
  string name = 1;
}

// Order服务
service OrderService {
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {
    option (google.api.http) = {
      get: "/v1/orders"
    };
  }

  rpc CreateOrder(CreateOrderRequest) returns (Order) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "order"
    };
  }

  rpc UpdateOrder(UpdateOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/v1/orders"
      body: "*"
    };
  }

  rpc GetOrder(GetOrderRequest) returns (Order) {
    option (google.api.http) = {
      get: "/v1/orders/{name=*}"
    };
  }

  rpc DeleteBook(DeleteOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/orders/{name=*}"
    };
  }
}
